<resources>
    <string name="app_name">App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="mytitle">India\'s App Portfolio</string>
<string name="btn1">Project 1</string>
    <string name="btn2">Project 2</string>
    <string name="btn3">Project 3</string>
    <string name="btn4">Project 4</string>
    <string name="btn5">Project 5</string>
    <string name="btn6">Project 6</string>
</resources>
