<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.beehappygames.appportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#d1eac4">




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"

            android:text="@string/mytitle"
            android:id="@+id/title"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="serif"
            android:visibility="visible"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp"
             />


    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btn1"
    android:id="@+id/btn1"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="116dp"
        android:onClick="sendMessage"/>

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btn2"
    android:id="@+id/btn2"
    android:layout_gravity="center_horizontal"
    android:layout_below="@+id/btn1"
    android:layout_centerHorizontal="true"
        android:onClick="sendMessage"/>

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btn3"
    android:id="@+id/btn3"
    android:layout_gravity="center_horizontal"
    android:layout_centerVertical="true"
        android:layout_below="@+id/btn2"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage"/>

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btn4"
    android:id="@+id/btn4"
    android:layout_gravity="center_horizontal"
        android:layout_below="@+id/btn3"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage"/>

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btn5"
    android:id="@+id/btn5"
    android:layout_gravity="center_horizontal"
        android:layout_below="@+id/btn4"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage"/>

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btn6"
    android:id="@+id/btn6"
    android:layout_gravity="center_horizontal"
        android:layout_below="@+id/btn5"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage"/>

</RelativeLayout>
